--- a/components/styles/nav.module.scss
+++ b/components/styles/nav.module.scss
@@ -39,27 +39,25 @@
 }
 
 // Mobile Nav
-.nav_mobile_container {
-    z-index: 1000;
-    width: 100vw;
-    position: fixed;
+.logo_mobile, .dropdown_btn {
+    cursor: pointer;
     display: none;
-    padding: 25px 25px;
-    justify-content: space-between;
-    align-items: center;
-
-    & > h1 {
-        font-family: 'ShadowsIntoLight';
-        cursor: pointer;
-        font-size: $lg_font;
-    }
-
+    z-index: 1000;
+    position: fixed;
+    top: 25px;
     @include breakpoint(mobile) {
         display: flex;
     }
 }
 
+.logo_mobile {
+    font-size: $lg_font;
+    font-family: 'ShadowsIntoLight';
+    left: 25px; 
+}
+
 .dropdown_btn {
+    right: 25px;
     width: 25px;
     height: 25px;
 }
