--- a/styles/lib/variables.scss
+++ b/styles/lib/variables.scss
@@ -1,5 +1,5 @@
-$font_color: #3a3a3a;
-$primary_color: #5881f0;
+$font_color: #000000;
+$primary_color: #120A8F;
 $secondary_color: #2c3dff;
 $background_color: rgb(255, 255, 255);
 
