--- a/styles/pages/about.module.scss
+++ b/styles/pages/about.module.scss
@@ -15,40 +15,18 @@ $component_margin: 200px;
     @extend %page_container;
 }
 
-.main {
-    // width: 1025px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 50px;
-
-    @include breakpoint(mobile) {
-        flex-direction: column;
-    }
-}
-
-.profile_container {
-    position: relative;
-    width: 500px;
-    height: 500px;
-
-    @include breakpoint(mobile) {
-        width: 250px;
-        height: 250px;
-    }
-}
-
 .about_me {
     display: flex;
     flex-direction: column;
-    max-width: 500px;
-
+    width: 1025px;
     @include breakpoint(tablet_mobile) {
-        flex: 1;
+        width: 100%;
     }
 
     & > p {
-        margin: 50px 0;
+        margin: 100px 0 50px 0;
+        max-width: 800px;
+
     }
 
     & > h4 {
@@ -60,10 +38,16 @@ $component_margin: 200px;
     margin-top: $component_margin;
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
     width: 1025px;
 
     @include breakpoint(tablet_mobile) {
         width: 100%;
+    }
+
+    & > p {
+        margin-top: 100px;
+        max-width: 800px;
     }
 }
 
@@ -76,6 +60,10 @@ $component_margin: 200px;
     @include breakpoint(tablet_mobile) {
         width: 100%;
     }
+
+    img {
+        width: 1em;
+    }
 }
 
 .card {
@@ -85,7 +73,7 @@ $component_margin: 200px;
     }
     & > p {
         margin-top: 50px;
-        width: 70%;
+        max-width: 800px;
     }
 }
 
