--- a/styles/lib/extension.scss
+++ b/styles/lib/extension.scss
@@ -4,6 +4,8 @@
   padding: 200px 100px 100px 100px;
   min-height: 100vh;
   width: 100vw;
+  max-width: 1920px;
+  margin: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
