--- a/styles/pages/about.module.scss
+++ b/styles/pages/about.module.scss
@@ -15,13 +15,32 @@ $component_margin: 200px;
     @extend %page_container;
 }
 
+.main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 1025px;
+    gap: 100px;
+    @include breakpoint(tablet_mobile) {
+        width: 100%;
+        flex-direction: column;
+        gap: 50px;
+    }
+
+    @include breakpoint(mobile) {
+        gap: 0;
+    }
+}
+.logo_container {
+    position: relative;
+    width: 300px;
+    height: 300px;
+}
+
 .about_me {
     display: flex;
     flex-direction: column;
-    width: 1025px;
-    @include breakpoint(tablet_mobile) {
-        width: 100%;
-    }
+
 
     & > p {
         margin: 100px 0 50px 0;
