--- a/styles/pages/documents.module.scss
+++ b/styles/pages/documents.module.scss
@@ -1,7 +1,7 @@
 @import '../lib/theme.scss';
 
 $component_margin: 200px;
-$component_margin_mobile: 100px;
+$component_margin_mobile: 150px;
 
 .subtitle {
     @extend %title_style;
@@ -13,7 +13,7 @@ $component_margin_mobile: 100px;
 }
 
 .description {
-    margin: 100px 0 50px 0;
+    margin: 75px 0 50px 0;
 
     @include breakpoint(mobile) {
         margin: 50px 0 25px 0;
@@ -36,16 +36,16 @@ $component_margin_mobile: 100px;
         }
 
         & > h3 {
-            margin-bottom: 25px;
-
-            @include breakpoint(mobile) {
-                margin-bottom: 25px;
-            }
+            margin: 50px 0 25px 0;
         }
     }
 
     ul, ol {
         padding-left: 50px;
+
+        @include breakpoint(mobile) {
+            padding-left: 25px;
+        }
         li {
             line-height: 1.5em;
     
@@ -150,6 +150,7 @@ $component_margin_mobile: 100px;
 
         @include breakpoint(mobile) {
             width: 70px;
+            margin: 0 3vw;
         }
     }
 }
