new template indicated

--- a/styles/lib/variables.scss
+++ b/styles/lib/variables.scss
@@ -1,6 +1,6 @@
 $font_color: #000000;
 $primary_color: #120A8F;
-$secondary_color: #2c3dff;
+$secondary_color: #ffab2c;
 $background_color: rgb(255, 255, 255);
 
 // Template color
