--- a/components/styles/card.module.scss
+++ b/components/styles/card.module.scss
@@ -1,5 +1,15 @@
 @import '../../styles/lib/theme.scss';
 
+.isNew {
+    @extend %title_style;
+    color: $secondary_color;
+    position: absolute;
+    top: -20px;
+    left: -20px;
+    z-index: 1000;
+    transform: rotateZ(-30deg);
+}
+
 .title {
     @extend %title_style;
     color: $primary_color;
